[build-system]
requires = [
    "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "ppyv"
version = "0.0.1"
description = "TODO"
readme = "Readme.md"
authors = [
    { name = "Corentin Cadiou", email = "corentin.cadiou@astro.lu.se" }
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = ["pytest"]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"

[tool.pytest.ini_options]
testpaths = ["ppyv"]
